css/style.css
/* ... */
/* Quote */
.deadlink {
  text-decoration: none !important;
}
.backlink.deadlink:not(.forwardlink), .quotelink.deadlink:not(.forwardlink) {
  text-decoration: underline !important;
}
.inlined {
  opacity: .5;
}
#qp input, .forwarded {
  display: none;
}
.quotelink.forwardlink,
.backlink.forwardlink {
  text-decoration: none;
  border-bottom: 1px dashed;
}
.filtered {
  text-decoration: underline line-through;
}
.inline {
  border: 1px solid;
  display: table;
  margin: 2px 0;
}
.inline .post {
  border: 0 !important;
  background-color: transparent !important;
  display: table !important;
  margin: 0 !important;
  padding: 1px 2px !important;
}
#qp > .opContainer::after {
  content: '';
  clear: both;
  display: table;
}
#qp .post {
  border: none;
  margin: 0;
  padding: 2px 2px 5px;
}
#qp img {
  max-height: 300px;
  max-width: 500px;
}
.qphl {
  outline: 2px solid rgba(216, 94, 49, .7);
}

/* File */
.fileText:hover .fntrunc,
.fileText:not(:hover) .fnfull {
  display: none;
}
:root.fit-width .full-image {
  max-width: 100%;
}
:root.gecko.fit-width .full-image,
:root.presto.fit-width .full-image {
  width: 100%;
}
.expanded-image > .op > .file::after {
  content: '';
  clear: both;
  display: table;
}
#ihover {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  max-height: 100%;
  max-width: 75%;
  padding-bottom: 16px;
}

/* Index/Reply Navigation */
#navlinks {
  font-size: 16px;
  top: 25px;
  right: 10px;
}

/* Filter */
.opContainer.filter-highlight {
  box-shadow: inset 5px 0 rgba(255, 0, 0, .5);
}
.filter-highlight > .reply {
  box-shadow: -5px 0 rgba(255, 0, 0, .5);
}

/* Thread & Reply Hiding */
.hide-thread-button,
.hide-reply-button {
  float: left;
  margin-right: 2px;
}
.stub ~ .sideArrows,
.stub ~ .hide-reply-button,
.stub ~ .post {
  display: none !important;
}

/* QR */
.hide-original-post-form #postForm,
.hide-original-post-form .postingMode,
#qr.autohide:not(:hover) > form {
  display: none;
}
#autohide, #qr select, #dump-button, .remove, .captcha-img {
  cursor: pointer;
}
#qr > div {
  min-width: 300px;
  display: -webkit-flex;
  display: flex;
  -webkit-align-items: center;
  align-items: center;
}
#qr .move {
  -webkit-align-self: stretch;
  align-self: stretch;
  -webkit-flex: 1;
  flex: 1;
}
#qr select {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: none;
}
.presto #qr select {
  height: 1em;
}
#qr .close {
  padding: 0 3px;
}
#qr > form {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
}
.persona {
  display: -webkit-flex;
  display: flex;
}
.persona .field {
  -webkit-flex: 1;
  flex: 1;
}
.persona .field:hover,
.persona .field:focus {
  -webkit-flex: 4;
  flex: 4;
}
#dump-button {
  background: -webkit-linear-gradient(#EEE, #CCC);
  background: linear-gradient(#EEE, #CCC);
  border: 1px solid #CCC;
  margin: 0;
  padding: 2px 4px 3px;
  outline: none;
  width: 30px;
}
#dump-button:hover, #dump-button:focus {
  background: -webkit-linear-gradient(#FFF, #DDD);
  background: linear-gradient(#FFF, #DDD);
}
#dump-button:active, .dump #dump-button:not(:hover):not(:focus) {
  background: -webkit-linear-gradient(#CCC, #DDD);
  background: linear-gradient(#CCC, #DDD);
}
.gecko #dump-button {
  padding: 0;
}
#qr:not(.dump) #dump-list-container {
  display: none;
}
#dump-list-container {
  height: 100px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  user-select: none;
}
#dump-list {
  counter-reset: qrpreviews;
  top: 0; right: 0; bottom: 0; left: 0;
  overflow: hidden;
  position: absolute;
  white-space: pre;
}
#dump-list:hover {
  bottom: -10px;
  overflow-x: auto;
  z-index: 1;
}
.qrpreview {
  background-position: 50% 20%;
  background-size: cover;
  border: 1px solid #808080;
  color: #FFF !important;
  font-size: 12px;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  cursor: move;
  display: inline-block;
  height: 90px; width: 90px;
  margin: 5px; padding: 2px;
  opacity: .6;
  outline: none;
  overflow: hidden;
  position: relative;
  text-shadow: 0 1px 1px #000;
  -webkit-transition: opacity .25s ease-in-out;
  transition: opacity .25s ease-in-out;
  vertical-align: top;
}
.qrpreview:hover, .qrpreview:focus {
  opacity: .9;
  color: #FFF !important;
}
.qrpreview#selected {
  opacity: 1;
}
.qrpreview::before {
  counter-increment: qrpreviews;
  content: counter(qrpreviews);
  font-weight: 700;
  text-shadow: 0 0 3px #000, 0 0 5px #000;
  position: absolute;
  top: 3px; right: 3px;
}
.qrpreview.drag {
  border-color: red;
  border-style: dashed;
}
.qrpreview.over {
  border-color: #FFF;
  border-style: dashed;
}
.remove {
  color: #E00 !important;
  font-weight: 700;
  padding: 3px;
}
.remove:hover::after {
  content: ' Remove';
}
.qrpreview > label {
  background: rgba(0, 0, 0, .5);
  right: 0; bottom: 0; left: 0;
  position: absolute;
  text-align: center;
}
.qrpreview > label > input {
  margin: 1px 0;
  vertical-align: bottom;
}
#addReply {
  display: inline-block;
  font-size: 30px;
  height: 30px;
  width: 30px;
  line-height: 1;
  text-align: center;
  position: absolute;
  right: 0; bottom: 0;
  z-index: 1;
}
#qr textarea {
  min-height: 160px;
  min-width: 100%;
  display: block;
}
#qr.has-captcha textarea {
  min-height: 120px;
}
.textarea {
  position: relative;
}
#char-count {
  color: #000;
  background: hsla(0, 0%, 100%, .5);
  font-size: 8pt;
  position: absolute;
  bottom: 1px;
  right: 1px;
  pointer-events: none;
}
#char-count.warning {
  color: red;
}
.captcha-img {
  background: #FFF;
  outline: 1px solid #CCC;
  outline-offset: -1px;
}
.captcha-img > img {
  display: block;
  height: 57px;
  width: 300px;
}
#file-n-submit.has-file #qr-no-file {
  visibility: hidden;
}
#file-n-submit:not(.has-file) #qr-filename,
#file-n-submit:not(.has-file) #qr-file-spoiler,
#file-n-submit:not(.has-file) #qr-filerm {
  display: none;
}
/* ... */

